--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "author": "Mohammad Sazzad Bin Anwar",
     "license": "ISC",
     "dependencies": {
+        "@socket.io/pm2": "^5.1.0",
         "axios": "^0.25.0",
         "cors": "^2.8.5",
         "express": "^4.17.2",
